<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lighter_grey"
    tools:context=".CreateBoard">

    <!-- Top Bar -->
    <RelativeLayout
        android:id="@+id/top_bar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/white"
        android:elevation="2dp">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"
            android:src="@drawable/back_button" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/create_board"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/btn_create"
            android:layout_width="85dp"
            android:layout_height="32dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="15dp"
            android:background="@drawable/blue_button"
            android:text="@string/create"
            android:gravity="center"
            android:textColor="@color/white"
            android:textStyle="bold"/>
    </RelativeLayout>

    <!-- Scrollable Content -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottom_navigation_separator"
        android:layout_below="@id/top_bar"
        android:fillViewport="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Card View containing the form -->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="12dp"
                app:cardElevation="15dp"
                app:cardUseCompatPadding="true"
                android:backgroundTint="@color/white"
                app:contentPadding="18dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView
                            android:id="@+id/label_board_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:text="@string/board_name"
                            android:textColor="@color/black"
                            android:textSize="15sp"
                            android:textStyle="bold" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:text=" *"
                            android:textColor="@color/red"
                            android:textSize="15sp"
                            android:textStyle="bold" />
                    </LinearLayout>
                    <EditText
                        android:id="@+id/edittext_board_name"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/rounded_edittext_bg"
                        android:hint="@string/give_your_board_a_name"
                        android:inputType="text"
                        android:paddingStart="12dp"
                        android:paddingEnd="12dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/light_grey"
                        android:textSize="14sp" />
                    <!-- Description Section -->
                    <TextView
                        android:id="@+id/label_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:text="@string/description"
                        android:textColor="@color/black"
                        android:textSize="15sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/edittext_description"
                        android:layout_width="match_parent"
                        android:layout_height="96dp"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/rounded_edittext_bg"
                        android:gravity="top|start"
                        android:hint="@string/what_is_your_board_about"
                        android:inputType="textMultiLine"
                        android:paddingStart="12dp"
                        android:paddingTop="12dp"
                        android:paddingEnd="12dp"
                        android:paddingBottom="12dp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/light_grey"
                        android:textSize="14sp" />
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:background="@drawable/bg_blue_bubble"
                        android:orientation="vertical"
                        >
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="15sp"
                            android:text="@string/board_tips"
                            android:textColor="@color/bright_blue"
                            android:layout_marginHorizontal="15dp"
                            android:layout_marginTop="10dp"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="12sp"
                            android:text="@string/board_tips_content"
                            android:textColor="@color/bright_blue"
                            android:layout_marginHorizontal="20dp"
                            android:layout_marginBottom="15dp"/>

                    </LinearLayout>

                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>

    <View
        android:id="@+id/bottom_navigation_separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@id/bottom_navigation"
        android:background="@color/grey" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        app:itemIconTint="@color/bottom_nav_item_color"
        app:itemTextColor="@color/bottom_nav_item_color"
        app:labelVisibilityMode="labeled"
        app:menu="@menu/bottom_nav_menu"
        app:itemActiveIndicatorStyle="@null"/>
</RelativeLayout>